...
                app:fontFamily="@font/delius_swash_caps" />

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/widget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        android:text="@string/widget_button_label"
...
        android:textSize="14sp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:id="@+id/ingredient_list_rv"
        >

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
