...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeDetails">

    <RelativeLayout
        android:id="@+id/ingredients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/SecondaryColorAccent"
        android:padding="16dp">

...
                android:padding="8dp"
                android:src="@drawable/iconingredient" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/recipe_steps_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
...
